# SeamCarving

./: CMakeLists.txt  README.md  energy_demo.cpp  energy_demo.h  image.cpp  main.cpp  seam_carving.cpp  seam_carving.h
src/: gui.cpp  gui.h  image.cpp  image.h  iterator.h  list.h  main.cpp  node.h
ui/: gui.ui  seam_carving.ui
